--- a/css/style.css
+++ b/css/style.css
@@ -40,14 +40,15 @@ body > h1{
 
 #space section{
      display:flex;
-     height: 100%;
-     width: 100%;
+     height: 50%;
+     width: 50%;
+     margin: 0 auto;
 }
 
 img{
      height: 100%;
      width: 100%;
-     padding-bottom: 10%;
+
 }
 
 #media{
@@ -56,7 +57,7 @@ img{
 }
 
 #space p{
-     padding: 0 15%;
+     padding: 0 10%;
      text-align: center;
      font-size: 1.2rem;
 
